@@ -39,6 +39,10 @@
 			<PackageName>autoconf automake gcc</PackageName>
 		</Package>
 		<Package>
+			<GenericName>expat</GenericName>
+			<PackageName>expat</PackageName>
+		</Package>
+		<Package>
 			<GenericName>cairo-development</GenericName>
 			<PackageName>cairo</PackageName>
 		</Package>
