@@ -29,6 +29,10 @@
 			<PackageName>java/openjdk8</PackageName>
 		</Package>
 		<Package>
+			<GenericName>expat</GenericName>
+			<PackageName>expat</PackageName>
+		</Package>
+		<Package>
 			<GenericName>maven</GenericName>
 			<PackageName>maven</PackageName>
 		</Package>
