@@ -36,6 +36,10 @@
 			<PackageName>p7zip</PackageName>
 		</Package>
 		<Package>
+			<GenericName>expat</GenericName>
+			<PackageName>expat</PackageName>
+		</Package>
+		<Package>
 			<GenericName>nasm</GenericName>
 			<PackageName>nasm</PackageName>
 		</Package>
